--- a/pages/hashtags/detail.wxss
+++ b/pages/hashtags/detail.wxss
@@ -6,3 +6,18 @@
 .hashtag-detail {
   background-color: var(--weui-BG-2);
 }
+
+.list-tabs {
+  display: flex;
+  background-color: var(--weui-BG-2);
+  border-bottom: 1rpx solid var(--weui-FG-3);
+}
+
+.list-tab_item {
+  padding: 15rpx 0;
+  margin: 0 40rpx;
+}
+
+.list-tabs .active {
+  border-bottom: 4rpx solid var(--weui-INDIGO-100);
+}
