--- a/pages/hashtags/detail.wxml
+++ b/pages/hashtags/detail.wxml
@@ -14,9 +14,13 @@
     <hashtag hashtag="{{hashtag}}" viewType="detail"></hashtag>
   </view>
 
+  <view class="list-tabs">
+    <view class="list-tab_item {{listType == 'new' ? 'active' : ''}}" bind:tap="onClickToNew">{{contentNewList}}</view>
+    <view class="list-tab_item {{listType == 'digest' ? 'active' : ''}}" bind:tap="onClickToDigest">{{contentDigest}}</view>
+  </view>
+
   <!-- 帖子列表 -->
   <block wx:if="{{detailType == 'posts'}}">
-    <view class="weui-cells__title">{{postName}}: {{hashtag.postCount}}</view>
     <view class="post-list" wx:for="{{posts}}" wx:for-item="post" wx:key="pid">
       <post post="{{post}}" viewType="list"></post>
     </view>
@@ -24,7 +28,6 @@
 
   <!-- 评论列表 -->
   <block wx:if="{{detailType == 'comments'}}">
-    <view class="weui-cells__title">{{commentName}}: {{hashtag.commentCount}}</view>
     <view class="comment-list" wx:for="{{comments}}" wx:for-item="comment" wx:key="cid">
       <comment comment="{{comment}}" viewType="list" showReplyToPost="{{false}}"></comment>
     </view>
