--- a/pages/timelines/index.wxss
+++ b/pages/timelines/index.wxss
@@ -8,7 +8,7 @@
 }
 
 .nav-tab_item {
-  padding: 10rpx 20rpx;
+  padding: 0 20rpx;
   margin: 0 10rpx;
 }
 
@@ -17,7 +17,6 @@
   height: 5rpx;
   width: 40rpx;
   margin: 0 auto;
-  margin-top: 6rpx;
   border-radius: 2rpx;
 }
 
