cosm: tabbar add id

--- a/pages/portal/discover.wxml
+++ b/pages/portal/discover.wxml
@@ -91,4 +91,4 @@
   </block>
 </scroll-view>
 
-<tabbar activeLabel="discover"></tabbar>
+<tabbar id="fresnsTabbar" activeLabel="discover"></tabbar>
