--- a/pages/posts/index.wxml
+++ b/pages/posts/index.wxml
@@ -27,4 +27,4 @@
   <loading status="{{loadingStatus}}" tipType="{{loadingTipType}}"></loading>
 </scroll-view>
 
-<tabbar activeLabel="posts"></tabbar>
+<tabbar id="fresnsTabbar" activeLabel="posts"></tabbar>
