--- a/pages/timelines/index.wxml
+++ b/pages/timelines/index.wxml
@@ -50,4 +50,4 @@
   <loading status="{{loadingStatus}}" tipType="{{loadingTipType}}"></loading>
 </scroll-view>
 
-<tabbar activeLabel="posts"></tabbar>
+<tabbar id="fresnsTabbar" activeLabel="posts"></tabbar>
