--- a/components/posts/post.wxss
+++ b/components/posts/post.wxss
@@ -50,13 +50,19 @@
   z-index: 99;
 }
 
+.content-title {
+  font-size: 30rpx;
+  font-weight: bold;
+  margin-bottom: 10rpx;
+}
+
 .content-title image {
   height: 48rpx;
   vertical-align: middle;
 }
 
 .content-text {
-  font-size: 26rpx;
+  font-size: 28rpx;
 }
 
 .fresns-content image {
